@@ -118,7 +118,7 @@ time. The kernel drivers expects a write to the watchdog device every minute.
 Otherwise the system will be reset. As a default 
 .B watchdog 
 will sleep for
-only 10 seconds so it triggers the device early enough.
+only 1 second so it triggers the device early enough.
 .PP
 Under high system load 
 .B watchdog 
