@@ -27,7 +27,7 @@
 
 # Defaults compiled into the binary
 #admin			= root
-#interval		= 10
+#interval		= 1
 #logtick                = 1
 #logdir			= /var/log/watchdog
 
