@@ -12,7 +12,7 @@ sign disables the feature as long as that makes sense.
 interval = <interval>
 Set the interval between two writes to the watchdog device. The kernel
 drivers expects a write command every minute. Otherwise the system will be
-rebooted. Default value is 10 seconds. An interval of more than a minute can
+rebooted. Default value is 1 second. An interval of more than a minute can
 only be used with the \-f command-line option.
 .TP
 logtick = <logtick>
